lsp: Restrict useless concurrency